test/good/generators/method02.px

class A def
    func* f() String def
        return


class B(A) def
    String s

    func* f() String def
        yield self.s


A a

a = A()
print [...a.f()]

a = B("abc")
print [...a.f()]
