test/bad/generators/generator02.px

func* f() String def
    yield ""

x = f()
